--- a/OpenRA.Game/OpenRA.Game.csproj
+++ b/OpenRA.Game/OpenRA.Game.csproj
@@ -207,6 +207,7 @@
     <Compile Include="Network\FrameData.cs" />
     <Compile Include="Network\ReplayConnection.cs" />
     <Compile Include="Network\Session.cs" />
+    <Compile Include="Network\TcpNetworkConnection.cs" />
     <Compile Include="ObjectCreator.cs" />
     <Compile Include="Network\SyncReport.cs" />
     <Compile Include="Traits\EditorAppearance.cs" />
