--- a/OpenRA.Game/OpenRA.Game.csproj
+++ b/OpenRA.Game/OpenRA.Game.csproj
@@ -203,6 +203,7 @@
     <Compile Include="ObjectCreator.cs" />
     <Compile Include="Network\SyncReport.cs" />
     <Compile Include="Network\ServerList.cs" />
+    <Compile Include="Orders\PaletteOnlyOrderTargeter.cs" />
     <Compile Include="Traits\EditorAppearance.cs" />
     <Compile Include="Traits\SubcellInit.cs" />
     <Compile Include="Traits\Target.cs" />
