--- a/mods/cnc/chrome.yaml
+++ b/mods/cnc/chrome.yaml
@@ -373,3 +373,12 @@ strategic: strategic.png
 	enemy_owned: 32,32,32,32
 	player_owned: 96,0,32,32
 
+opal-button-gdi: buttons.png
+	normal: 0,0,34,28
+	pressed: 34,0,34,28
+	hover: 68,0,34,28
+	
+opal-button-nod: buttons.png
+	normal: 0,0,34,28
+	pressed: 34,0,34,28
+	hover: 68,0,34,28
