Support RA3-style selection outlines

--- a/mods/cnc/rules/defaults.yaml
+++ b/mods/cnc/rules/defaults.yaml
@@ -187,6 +187,7 @@
 	AppearsOnRadar:
 	Selectable:
 		Priority: 3
+		BorderWidth: 2
 	TargetableBuilding:
 		TargetTypes: Ground
 	Armor:
@@ -265,6 +266,7 @@
 		Range: 8
 	Selectable:
 		Priority: 1
+		BorderWidth: 2
 	RenderBuildingWall:
 		HasMakeAnimation: false
 		Palette: staticterrain
