--- a/mods/cnc/chrome/preferences.yaml
+++ b/mods/cnc/chrome/preferences.yaml
@@ -46,6 +46,7 @@ Container@SETTINGS_PANEL:
 					Y:40
 					Width:80
 					Height:25
+					IgnoreChildMouseOver: true
 					Children:
 						ColorBlock@COLORBLOCK:
 							Id:COLORBLOCK
