put CheckAutotargetWiring in its own file

--- a/OpenRA.Mods.RA/OpenRA.Mods.RA.csproj
+++ b/OpenRA.Mods.RA/OpenRA.Mods.RA.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Effects\GpsDot.cs" />
     <Compile Include="GivesBounty.cs" />
     <Compile Include="Lint\LintBuildablePrerequisites.cs" />
+    <Compile Include="Lint\CheckAutotargetWiring.cs" />
     <Compile Include="ProductionBar.cs" />
     <Compile Include="Render\RenderEditorOnly.cs" />
     <Compile Include="SmokeTrailWhenDamaged.cs" />
