add lint pass to check whether types with ISync actually have any [Sync] members

--- a/OpenRA.Mods.RA/OpenRA.Mods.RA.csproj
+++ b/OpenRA.Mods.RA/OpenRA.Mods.RA.csproj
@@ -71,6 +71,7 @@
     <Compile Include="GivesBounty.cs" />
     <Compile Include="Lint\LintBuildablePrerequisites.cs" />
     <Compile Include="Lint\CheckAutotargetWiring.cs" />
+    <Compile Include="Lint\CheckSyncAnnotations.cs" />
     <Compile Include="ProductionBar.cs" />
     <Compile Include="Render\RenderEditorOnly.cs" />
     <Compile Include="SmokeTrailWhenDamaged.cs" />
