--- a/mods/ra/chrome/ingame.yaml
+++ b/mods/ra/chrome/ingame.yaml
@@ -82,8 +82,6 @@ Container@INGAME_ROOT:
 		RadarBin@INGAME_RADAR_BIN:
 			Id:INGAME_RADAR_BIN
 			WorldInteractionController:INTERACTION_CONTROLLER
-		PowerBin@INGAME_POWER_BIN:
-			Id:INGAME_POWER_BIN
 		MoneyBin@INGAME_MONEY_BIN:
 			Id:INGAME_MONEY_BIN
 			X:WINDOW_RIGHT - WIDTH
@@ -91,6 +89,11 @@ Container@INGAME_ROOT:
 			Width:320
 			Height: 32
 			Children:
+				PowerBin@INGAME_POWER_BIN:
+					Id:INGAME_POWER_BIN
+					Width: 320
+					Y: 48
+					Height: 20
 				OrderButton@SELL:
 					Id:SELL
 					Logic:OrderButtonsChromeLogic
