Map box will open straight away, a "Loading Maps" message will appear until the maps load. Had to make a couple of methods thread safe since EnumerateMaps starts in a new thread

--- a/mods/cnc/chrome/mapchooser.yaml
+++ b/mods/cnc/chrome/mapchooser.yaml
@@ -78,3 +78,9 @@ Container@MAPCHOOSER_PANEL:
 					Width:140
 					Height:35
 					Text:Ok
+				Label@LOADING_MAPS:
+					Id:LOADING_MAPS
+					X:PARENT_LEFT + 240
+					Y:PARENT_TOP + 200
+					Text:Loading Maps
+					Font:Bold
