--- a/OpenRA.Renderer.Cg/OpenRA.Renderer.Cg.csproj
+++ b/OpenRA.Renderer.Cg/OpenRA.Renderer.Cg.csproj
@@ -36,7 +36,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\</OutputPath>
+    <OutputPath>.</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -62,16 +62,13 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Tao.Cg, Version=2.0.0.0, Culture=neutral, PublicKeyToken=52fa5aba625fe731">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Tao.Cg">
       <HintPath>..\thirdparty\Tao\Tao.Cg.dll</HintPath>
     </Reference>
-    <Reference Include="Tao.OpenGl, Version=2.1.0.12, Culture=neutral, PublicKeyToken=1ca010269a4501ef">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Tao.OpenGl">
       <HintPath>..\thirdparty\Tao\Tao.OpenGl.dll</HintPath>
     </Reference>
-    <Reference Include="Tao.Sdl, Version=1.2.13.0, Culture=neutral, PublicKeyToken=9c7a200e36c0094e">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Tao.Sdl">
       <HintPath>..\thirdparty\Tao\Tao.Sdl.dll</HintPath>
     </Reference>
   </ItemGroup>
