--- a/OpenRA.Mods.RA/OpenRA.Mods.RA.csproj
+++ b/OpenRA.Mods.RA/OpenRA.Mods.RA.csproj
@@ -420,6 +420,7 @@
     <Compile Include="Widgets\ColorPreviewManagerWidget.cs" />
     <Compile Include="FogPalette.cs" />
     <Compile Include="Infiltrates.cs" />
+    <Compile Include="AI\BotScriptAI.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OpenRA.FileFormats\OpenRA.FileFormats.csproj">
